# scgl

./: .gitignore  CMakeLists.txt  README.md  SCGL.sln  SCGL.vcxproj  SCGL.vcxproj.filters
.github/workflows/: msbuild.yml
scgl/: GLShareableState.h  GLStateManager.cpp  GLStateManager.h  GLSupport.cpp  GLSupport.h  GLTextureUnit.cpp  GLTextureUnit.h  VertexFormatUtils.cpp  VertexFormatUtils.h  cGDCombiner.h  cGDriver.cpp  cGDriver.h  cGDriver_Info.cpp  cGDriver_Init.cpp  cGDriver_Textures.cpp  cGDriver_Unknown.cpp  cGDriver_Viewport.cpp  cGDriversCOMDirector.cpp  cIGZBuffer.h  cIGZGDriver.h  sGDMode.h
scgl/ext/: cGDriver_BufferRegions.cpp  cGDriver_Lighting.cpp  cGDriver_Snapshot.cpp  cGDriver_VertexBuffers.cpp  cIGZGBufferRegionExtension.h  cIGZGDriverLightingExtension.h  cIGZGDriverVertexBufferExtension.h  cIGZGSnapshotExtension.h
